app/assets/stylesheets/application.scss
@import "variables";
@import "pages";
@import "events";
@import "posts";
@import "footer";
@import "images";

@import "bootstrap-sprockets";
@import "bootstrap";
@import "bootstrap-datetimepicker";
@import "summernote";
@import "summernote-modifications";
@import "codemirror";
@import "codemirror/themes/solarized";
@import "font-awesome";
@import "ekko-lightbox";
@import "select2";
@import "select2-bootstrap";
@import "jquery.minicolors";
@import "fileinput";
@import "nestable";

/*  -- NAVBAR --  */
.navbar .navbar-nav {
  .dropdown-menu {
    min-width: 100%;
    text-align: center;
  }
  @media (min-width: $screen-xs-max) {
    width: 100%;
    text-align: center;
    display: table;

    li {
      float: none;
      display: table-cell;
    }
    .dropdown-menu li {
      display: block;
    }
  }
}

/*  -- PANORAMA --  */
.panorama-wrapper {
  margin-top: 50px;
  overflow: hidden;
  position: relative;
  max-height: 380px;

  #logo {
    position: absolute;
    margin: auto;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    width: 35%;
    max-width: 500px;
    z-index: 1;
  }

  #panorama {
    margin-top: -5px;
    margin-bottom: -10px;
    width: 100%;
  }
}

/*  -- SIDEBAR --  */
.sidebar {
  border-left: 2px solid #eee;
  margin-left: -26px;
  padding-left: 26px;

  width: 337px;
  &.affix {
    /* Affix plugin will try to set position:relative
       Since we use that for small screens
     */
    position: fixed !important;
    /* Calculating this dynamically with js would
      make the transition to affixed look better
      */
    top: 96px;
  }

  @media (max-width: $screen-sm-max) {
    &.affix {
      top: 0;
    }
    position: relative;
    border-left: none;
    margin-top: 30px;
    margin-left: auto;
    margin-right: auto;
  }

  ul {
    list-style-type: none;
    padding-left: 0;
  }

  a {
    color: $light-blue;
  }

  .link {
    color: $light-gray;
    font-style: italic;
    text-align: right;
    display: inherit;
  }

  .row {
    margin-bottom: 5px;
    margin-left: 8px;
  }

  .sidebar-glyph {
    color: $lighter-gray;
  }

  #twitter-feed {
    h5 {
      margin-bottom: 2px;
      font-size: 18px;
    }

    .twitter-name {
      font-size: 12px;
      color: $dark-gray;
    }
  }

  .calendar-feed {
    .event-thumb {
      margin-right: 20px;
      margin-top: 2px;
      height: 50px;
      width: 50px;

      border: 1px solid $brand-primary;
      border-radius: 3px;

      text-align: center;

      .month {
        font-size: 11px;
        color: $brand-primary;
      }

      .day {
        font-size: 24px;
        margin-bottom: -2px;
      }
    }

    h3 {
      margin-top: 0px;
      margin-bottom: 2px;
    }

    p {
      font-size: 13px;
    }

    li {
      display: inline;
      height: 40px;
    }
  }
}

/*  -- PAGE CONTENT --  */
#content {
  margin-top: 50px;
  margin-bottom: 50px;

  padding-left: 4%;
  padding-right: 4%;

  .lead {
    font-size: 18px;
  }

  .wmd-input {
    height: 300px !important;
  }
  .lead a {
    color: $light-gray;
    font-style: italic;
  }
}

.page-header {
  margin-top: 0px;
}

.large-select {
  .select2-choice {
    height: 36px;
    width: 200px;
  }
}

.modal-title {
  text-overflow: ellipsis;
  overflow: hidden;
}

.pagination {
  display: table;
  margin-left: auto;
  margin-right: auto;
}

.center-pills {
  text-align: center;
  .nav-pills {
    display: inline-block;
  }
}

#insertImageModal .modal-header {
  text-align: center;
  #image-modal-tabs {
    display: inline-block;
  }
}

.select2-choice, .select2-choices, .select2-drop, .select2-search > input {
  border-radius: 0 !important;
}

.post-text-fields input {
  margin-bottom: 11px;
}

